// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spinner > default 1`] = `
<svg
  aria-label="Loading"
  class="lucide lucide-loader-circle size-4 animate-spin"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`spinner > large 1`] = `
<svg
  aria-label="Loading"
  class="lucide lucide-loader-circle animate-spin size-8"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`spinner > small 1`] = `
<svg
  aria-label="Loading"
  class="lucide lucide-loader-circle animate-spin size-3"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;
